# dummy_ros

./: README.md  dummy2-SLDASMdummy_base_linkl6_5000_1.000000_1.000000.ikcache
Log/: OrbbecSDK.log.txt
dummy2-SLDASM/: CMakeLists.txt  package.xml
dummy2-SLDASM/launch/: display.launch  gazebo.launch
dummy2-SLDASM/meshes/: l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
dummy2-SLDASM/urdf/: dummy2-SLDASM.csv  dummy2-SLDASM.urdf
dummy2_can2eth/: package.xml  setup.cfg  setup.py
dummy2_can2eth/dummy2_can2eth/: dummy2_can2eth_server.py
dummy2_hand_eye_calibration/: CMakeLists.txt
dummy2_hand_eye_calibration/launch/: validate.launch.py
dummy2_hand_eye_calibration/scripts/: follow_aruco_marker.py
dummy_moveit/: CMakeLists.txt  package.xml
dummy_moveit/config/: dummy2-SLDASM.ros2_control.xacro  dummy2-SLDASM.srdf  dummy2-SLDASM.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planner.yaml  ros2_controllers.yaml
dummy_moveit/launch/: demo.launch.py  move_group.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/include/libobsensor/: ObSensor.h  ObSensor.hpp
install/include/magic_enum/: magic_enum.hpp
install/include/orbbec_camera/: constants.h  d2c_viewer.h  dynamic_params.h  image_publisher.h  jetson_nv_decoder.h  jpeg_decoder.h  ob_camera_node.h  ob_camera_node_driver.h  rk_mpp_decoder.h  ros_param_backend.h  synced_imu_publisher.h  utils.h
install/lib/dummy2_can2eth/: arm_joy  dummy2_can2eth_server
install/lib/dummy2_hand_eye_calibration/: calibration_aruco_publisher.py  follow_aruco_marker.py  handeye_publisher.py
install/lib/easy_handeye2/: handeye_calibration_commander  handeye_publisher  handeye_server  handeye_server_robot  rqt_calibrator.py  rqt_evaluator.py
install/lib/orbbec_camera/: frame_latency_node  list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  orbbec_camera_node  topic_statistics_node
install/lib/pymoveit2/: ex_allow_collisions.py  ex_clear_planning_scene.py  ex_collision_mesh.py  ex_collision_primitive.py  ex_fk.py  ex_gripper.py  ex_ik.py  ex_joint_goal.py  ex_orientation_path_constraint.py  ex_pose_goal.py  ex_servo.py
install/share/dummy2-gripperv3_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/dummy2-gripperv3_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/dummy2_can2eth/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/share/dummy2_hand_eye_calibration/: local_setup.bash  (+9 more)
log/: latest_build
src/Log/: OrbbecSDK.log.txt
src/dummy2-gripperv3_description/: package.xml  setup.cfg  setup.py
src/dummy2-gripperv3_moveit_config/: .setup_assistant  CMakeLists.txt
src/dummy2_can2eth/: setup.py
src/dummy2_hand_eye_calibration/: LICENSE  hand_eye_calibration.repos  package.xml
src/dummy2_hw/: CMakeLists.txt  dummy2_hardware.xml
src/dummy2_hw/src/: dummy2_hardware.cpp
src/dummy2_interface/: CMakeLists.txt
src/dummy_moveit/: .setup_assistant
(+1141 files in other folders)
