<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy2_can2eth</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="11275496+xiaowen08@user.noreply.gitee.com">liyq</maintainer>
  <license>TODO: License declaration</license>

  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

<buildtool_depend>ament_python</buildtool_depend>
<build_depend>rclpy</build_depend>
<build_depend>dummy2_interface</build_depend>
<exec_depend>rclpy</exec_depend>
<exec_depend>dummy2_interface</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
